--- a/Tarea/index.html
+++ b/Tarea/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body class="bg-dark">
 
@@ -137,8 +137,8 @@
         <div class="col-sm-4 container">
             <div class="inicio">
                 <div class="inicio-div">
-                    <nav aria-label="Page navigation usuario d-flex justify-content-center align-items-center">
-                        <ul class="pagination">
+                    <nav aria-label="Page navigationr">
+                        <ul class="pagination" >
     
                         </ul>
                     </nav>
